# Violent

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/Violent/: VLoglevel.h  Violent.h
include/Violent/Formatters/: VBracketFormatter.h  VDateTimeFormatter.h  VFormatter.h  VLogLevelFormatter.h  VNullTerminatorFormatter.h
include/Violent/Loggers/: VBaseLogger.h  VConsoleLogger.h  VFileLogger.h
include/Violent/Utils/: VColorFormatDescriptor.h  VFormatDescriptor.h  VSerialize.h  VSerialize.inl  VTimes.h  VUtils.h
tests/: CMakeLists.txt
tests/DefaultTest/: CMakeLists.txt  main.cpp
